# ddd_rust_3d_graphics

./: Cargo.toml  README.md
native/: Cargo.toml  README.md
native/assets/: asset_150.glslf  cube_150.glslf
native/src/: app.rs  main.rs
shared/: Cargo.toml
shared/src/lib/: lib.rs  matrix.rs  plane.rs  point.rs  traits.rs  utils.rs
shared/src/lib/types/: coordinate_system.rs
shared/src/lib/utils/: from_obj_file.rs
src/: main.rs  utils.rs
src/lib/: lib.rs  matrix.rs  mesh.rs  point.rs  traits.rs  triangle.rs  types.rs  window.rs
src/lib/traits/: drawable.rs  into_polygons.rs  scalable.rs
src/lib/types/: matrix_sizes.rs  vector.rs
src/structs/: matrix.rs  mod.rs  point.rs
src/structs/traits/: structifyable.rs  vectorizable.rs
src/structs/types/: matrix_sizes.rs
wasm/: Cargo.toml
