[package]
authors = ["Daniel Sonne Lehnberg <doddy@doddy.se>"]
edition = "2018"
name = "ddd_rust_3d_graphics"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ddd_rust_3d_graphics"
path = "src/lib/lib.rs"

[dependencies]
winit = "*"
