[package]
authors = ["Daniel Sonne Lehnberg <doddy@doddy.se>"]
edition = "2018"
name = "shared"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "shared"
path = "src/lib/lib.rs"

[dependencies]
camera_controllers = "0.32.0"
obj-rs = "0.6.2"
piston_window = "0.116.0"
vecmath = "1.0.0"
